Changes xml_path to xml

--- a/validate_EDTF_from_XML.ipynb
+++ b/validate_EDTF_from_XML.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "def extract_xpath_value(xml, xpath):\n",
-    "    tree = etree.parse(xml_path)\n",
+    "    tree = etree.parse(xml)\n",
     "    r = tree.xpath(xpath)\n",
     "    return r[0].text"
    ]
